prevented width from collapsing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .flex-container {
   display: flex;
+  padding: 20px;
 }
 
 .flashcard {
@@ -12,9 +13,7 @@
   border-radius: 10px;
   position: relative;
   align-items: center;
-  justify-content: center;
-
- 
+  justify-content: center; 
 }
 
 .front-inner {
@@ -22,7 +21,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
-  max-width: 250px;
+  width: 250px;
   height: 200px; 
   background: darkkhaki;
   padding: 10px;
